<resources>
    <string name="app_name">GeoCar</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hirerefnumber">Booking Reference Number</string>
    <string name="signin">Sign In</string>
    <string name="register">Register</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
</resources>
