<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#DDD"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_log_in"
    tools:context=".LogIn">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"/>
        <EditText
            android:id="@+id/email_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:text="form100@geocar.com"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="5dp"/>
        <EditText
            android:id="@+id/password_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TestPassword12345"
            android:inputType="textPassword"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/signin_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin"/>

            <TextView
                android:id="@+id/register_lnk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_marginLeft="30dp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="&quot;Droid Sans&quot;;"
        android:textSize="60sp"
        android:textStyle="bold"
        android:textColor="#FF9400D3"
        android:layout_marginBottom="49dp"
        android:layout_above="@+id/login_layout"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="36dp"
        android:id="@+id/textView2" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:visibility="invisible" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentStart="true"
        android:src="@mipmap/appicon"
        android:layout_alignTop="@+id/textView2"
        android:layout_toStartOf="@+id/textView2" />

</RelativeLayout>
